@@ -16,6 +16,7 @@
  *  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
  */
 
+#include "solarsys.h"
 #include "lander.h"
 #include "../colors.h"
 #include "../controls.h"
